<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/home" />
        <item
            android:id="@+id/nav_raeume"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/rooms" />
        <item
            android:id="@+id/nav_freundesliste"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/friendlist" />
        <item
            android:id="@+id/nav_einstellungen"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/settings" />
    </group>

    <item android:title="@string/getMaster">
        <menu>
            <item
                android:id="@+id/nav_professor_stundenplan"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/timetable" />
        </menu>
    </item>

</menu>
